RESOLVED FIXED64871
gtk shouldn't have global variables for timers.
https://bugs.webkit.org/show_bug.cgi?id=64871
Summary gtk shouldn't have global variables for timers.
David Levin
Reported 2011-07-20 07:54:51 PDT
Globals slow down start time and more importantly to me cause currentThread() to be called before WTF::initializeThreading() has been called.
Attachments
Patch (2.77 KB, patch)
2011-07-20 07:59 PDT, David Levin
mrobinson: review+
David Levin
Comment 1 2011-07-20 07:59:12 PDT
Martin Robinson
Comment 2 2011-07-20 09:30:01 PDT
Comment on attachment 101470 [details] Patch I'm afraid these are both my fault. Thanks for fixing them!
David Levin
Comment 3 2011-07-20 11:11:24 PDT
No worries. (It wasn't a big problem until my next patch in bug 64577 :).) Committed as http://trac.webkit.org/changeset/91378
Note You need to log in before you can comment on or make changes to this bug.