gtk shouldn't have global variables for timers. https://bugs.webkit.org/show_bug.cgi?id=64871

Reviewed by Martin Robinson.

No new functionality exposed so no new tests.

* platform/graphics/cairo/ContextShadowCairo.cpp:
(WebCore::scheduleScratchBufferPurge): Changed global variable to DEFINE_STATIC_LOCAL.
* platform/gtk/WidgetRenderingContext.cpp:
(WebCore::scheduleScratchBufferPurge): Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@91378 bbb929c8-8fbe-4397-9dbb-9b2b20218538