third_party/WebKit/Source/WebCore/platform/graphics/cairo/ContextShadowCairo.cpp
@@ -38,6 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "PlatformContextCairo.h"
 #include "Timer.h"
 #include <cairo.h>
+#include <wtf/StdLibExtras.h>
 
 using WTF::max;
 
@@ -56,9 +57,10 @@ class PurgeScratchBufferTimer : public TimerBase {
 private:
     virtual void fired() { purgeScratchBuffer(); }
 };
-static PurgeScratchBufferTimer purgeScratchBufferTimer;
+
 static void scheduleScratchBufferPurge()
 {
+    DEFINE_STATIC_LOCAL(PurgeScratchBufferTimer, purgeScratchBufferTimer, ());
     if (purgeScratchBufferTimer.isActive())
         purgeScratchBufferTimer.stop();
     purgeScratchBufferTimer.startOneShot(2);
