third_party/WebKit/Source/WebCore/platform/gtk/WidgetRenderingContext.cpp
@@ -40,6 +40,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Timer.h"
 #include <gdk/gdk.h>
 #include <gtk/gtk.h>
+#include <wtf/StdLibExtras.h>
 
 namespace WebCore {
 
@@ -59,9 +60,10 @@ class PurgeScratchBufferTimer : public TimerBase {
 private:
     virtual void fired() { purgeScratchBuffer(); }
 };
-static PurgeScratchBufferTimer purgeScratchBufferTimer;
+
 static void scheduleScratchBufferPurge()
 {
+    DEFINE_STATIC_LOCAL(PurgeScratchBufferTimer, purgeScratchBufferTimer, ());
     if (purgeScratchBufferTimer.isActive())
         purgeScratchBufferTimer.stop();
     purgeScratchBufferTimer.startOneShot(2);
